[SYSTEMDS-3874] Java17 Vectorized LibMM
This commit adds vectorized kernels for matrix multiplication.

the vector API improves performance for single-threaded execution of our
AMD box improves by ~80% and Intel by ~60% for dense mm. These improvements
are with allocation overhead of the output and in ideal cases where the
input is cached and the JIT compilation is done.

The biggest change for users is that SystemDS now would require
`--add-modules=jdk.incubator.vector` to all execution calls. The commit
appropriately modifies all scripts to do this. However, all calling code
must be modified if it bypasses the bin/systemds and calls Java directly.

To measure the performance difference on your machine, use the added script:

src/test/scripts/performance/matrixMultiplication.sh

Closes #2216